--- a/templates/export.html
+++ b/templates/export.html
@@ -6,6 +6,11 @@
     <script>
         $(document).ready(function(){
 
+            if('{{nothing_searched}}' == 1){
+                alert('검색된 결과가 없습니다.');
+            }
+
+
             $("#fromdate").datepicker({
                 format: 'yyyy-mm-dd',
                 autoclose:true,
@@ -55,48 +60,52 @@
 
             });
 
+
             // 원본 출력 버튼 클릭시
             $("#original").click(function(){
-                var today = new Date();
-                var fromdate_val_temp = $("#fromdate").datepicker("getDate");
-                var fromdate_val = fromdate_val_temp.getFullYear() + '-' + (fromdate_val_temp.getMonth()+1) + '-' + fromdate_val_temp.getDate();
-                $("#fromdate_hid").val(fromdate_val);
-                var todate_val_temp = $("#todate").datepicker("getDate");
-                var todate_val = todate_val_temp.getFullYear() + '-' + (todate_val_temp.getMonth()+1) + '-' + todate_val_temp.getDate();
-                $("#todate_hid").val(todate_val);
-
-
-
-                // 오늘이 지난 날짜는 선택 불가능
-                if(fromdate_val_temp > today || todate_val_temp > today){
-                    alert('오늘(포함) 기준 이전 날짜만 선택 가능합니다. 다시 선택해주세요.');
-                }
-
-                // 시작 날짜와 끝날짜 둘 중 하나만 선택하면 오류
-                else if((fromdate_val_temp == null && todate_val_temp != null) || (fromdate_val_temp != null && todate_val_temp == null)){
-                    alert('시작/끝 날짜 중 하나만 선택할 수 없습니다. 다시 선택해주세요.');
-                }
-
-                // 시작 날짜가 더 클 수 없음
-                else if(fromdate_val_temp > todate_val_temp){
-                    alert('시작 날짜가 더 클 수 없습니다. 다시 선택해주세요.');
-                }
-
-                else{
-
-
-                    $("#frm").attr("method", "post");
-                    $("#frm").attr("action", "/export");
-                    $("#frm").submit();
-                }
+                export_preprocess('original');
             });
 
             // 변환 출력 클릭시
             $("#converted").click(function(){
-                alert('converted!');
+                export_preprocess('converted');
             });
 
         });
+
+
+        function export_preprocess(button_type){
+            var today = new Date();
+            var fromdate_val_temp = $("#fromdate").datepicker("getDate");
+            var fromdate_val = fromdate_val_temp.getFullYear() + '-' + (fromdate_val_temp.getMonth()+1) + '-' + fromdate_val_temp.getDate() + ' 00:00:00';
+            $("#fromdate_hid").val(fromdate_val);
+            var todate_val_temp = $("#todate").datepicker("getDate");
+            var todate_val = todate_val_temp.getFullYear() + '-' + (todate_val_temp.getMonth()+1) + '-' + todate_val_temp.getDate() + ' 23:59:59';
+            $("#todate_hid").val(todate_val);
+
+
+            // 오늘이 지난 날짜는 선택 불가능
+            if(fromdate_val_temp > today || todate_val_temp > today){
+                alert('오늘(포함) 기준 이전 날짜만 선택 가능합니다. 다시 선택해주세요.');
+            }
+
+            // 시작 날짜와 끝날짜 둘 중 하나만 선택하면 오류
+            else if((fromdate_val_temp == null && todate_val_temp != null) || (fromdate_val_temp != null && todate_val_temp == null)){
+                alert('시작/끝 날짜 중 하나만 선택할 수 없습니다. 다시 선택해주세요.');
+            }
+
+            // 시작 날짜가 더 클 수 없음
+            else if(fromdate_val_temp > todate_val_temp){
+                alert('시작 날짜가 더 클 수 없습니다. 다시 선택해주세요.');
+            }
+
+            else{
+                $("#frm").attr("method", "post");
+                $("#frm").attr("action", "/export/" + button_type);
+                $("#frm").submit();
+
+            }
+        }
 
     </script>
 {% endblock %}
@@ -113,7 +122,7 @@
     </li>
 
     <li class="nav-item active">
-        <a class="nav-link" href="{{url_for('export')}}">Export</a>
+        <a class="nav-link" href="{{url_for('export', button_type='')}}">Export</a>
     </li>
 </ul>
 
@@ -128,7 +137,7 @@
     <div class="container">
         <form id="frm">
             <div class="form-group form-row my-4">
-                <label class="col-form-label col-md-2 text-center badge-dark mr-4">기간</label>
+                <label class="col-form-label rounded col-md-2 text-center badge-dark mr-4">기간</label>
                 <div class="col-md-3">
                     <input type="button" id="fromdate" name="fromdate" class="form-control">
                     <input type="hidden" id="fromdate_hid" name="fromdate_hid" value="">
@@ -143,7 +152,7 @@
             </div>
 
             <div class="form-group form-row my-4">
-                <label class="col-form-label col-md-2 text-center badge-dark mr-4">대분류</label>
+                <label class="col-form-label rounded col-md-2 text-center badge-dark mr-4">대분류</label>
 
                 <div class="col-md-3">
                     <select class="form-control" name="sid1" id="sid1_id">
@@ -160,7 +169,7 @@
             </div>
 
             <div class="form-group form-row my-4">
-                <label class="col-form-label col-md-2 text-center badge-dark mr-4">소분류</label>
+                <label class="col-form-label rounded col-md-2 text-center badge-dark mr-4">소분류</label>
 
                 <div class="col-md-3">
                     <select class="form-control" name="sid2" id="sid2_id">
