- edit 페이지 화살표 문장 이동 기능 구현

--- a/templates/export.html
+++ b/templates/export.html
@@ -155,7 +155,7 @@
                 <label class="col-form-label rounded col-md-2 text-center badge-dark mr-4">대분류</label>
 
                 <div class="col-md-3">
-                    <select class="form-control" name="sid1" id="sid1_id">
+                    <select class="form-control custom-select" name="sid1" id="sid1_id">
                         <option class="font-weight-bold">전체</option>
                         <option style="font-size: 1pt; background-color: #000000;" disabled>&nbsp;</option>
                         <option>정치</option>
@@ -172,7 +172,7 @@
                 <label class="col-form-label rounded col-md-2 text-center badge-dark mr-4">소분류</label>
 
                 <div class="col-md-3">
-                    <select class="form-control" name="sid2" id="sid2_id">
+                    <select class="form-control custom-select" name="sid2" id="sid2_id">
                     </select>
                 </div>
             </div>
