--- a/templates/article_board.html
+++ b/templates/article_board.html
@@ -13,6 +13,7 @@
                 $(".MyFormClass").attr("action", "/article_board/delete");
                 $(".MyFormClass").submit();
             });
+
         });
 
         function trigger_modal(article_id){
@@ -95,10 +96,6 @@
     </script>
 
 
-
-
-
-
 {% endblock %}
 
 
@@ -122,7 +119,7 @@
     </li>
 
     <li class="nav-item">
-        <a class="nav-link" href="{{url_for('text_board', page=1, col_name='sent_id', asc1_desc0=1)}}">Sentence Board</a>
+        <a class="nav-link" href="{{url_for('text_board', page=1, col_name='sent_id', asc1_desc0=1, is_all_sents=1)}}">Sentence Board</a>
     </li>
 
     <li class="nav-item">
@@ -314,6 +311,9 @@
             </div>
         </div>
         {% endfor %}
+
+
+        <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left"><i class="fas fa-arrow-circle-up fa-2x"></i></a>
 
 
     </div>
