--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,28 @@
             setTimeout(function(){
                 $('.flashes').slideUp();
             }, 2000)
+
+
+
+            $(window).scroll(function () {
+                if ($(this).scrollTop() > 50) {
+                    $('#back-to-top').fadeIn();
+                } else {
+                    $('#back-to-top').fadeOut();
+                }
+            });
+
+            // scroll body to 0px on click
+            $('#back-to-top').click(function () {
+                $('#back-to-top').tooltip('hide');
+                $('body,html').animate({
+                    scrollTop: 0
+                }, 800);
+                return false;
+            });
+
+            $('#back-to-top').tooltip('show');
+
         });
 
     </script>
@@ -86,6 +108,16 @@
         .modal-dialog {
             top:50%;
             margin-top: -150px;
+        }
+
+
+        .back-to-top {
+            cursor: pointer;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display:none;
+            z-index:1;
         }
 
     </style>
